fixed issue that was making the contact details off center

--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,11 @@ h2 {
   font-weight: normal;
 }
 
+ul {
+  padding: 0px;
+  margin: 0px;
+}
+
 li {
   list-style: none;
   line-height: 1.5em;
